project card width on mobile view fix

--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -13,10 +13,6 @@ nav {
   transform: translateX(-50%);
 }
 
-.nav-home {
-  /* left: 2.2rem; */
-}
-
 .nav-bottom {
   display: flex;
   flex-direction: row;
