--- a/src/components/project.css
+++ b/src/components/project.css
@@ -11,6 +11,7 @@
   max-width: 800px;
   margin: auto;
   min-height: 310px;
+  min-width: 340px;
   transition: transform 0.2s ease;
 }
 
